fix(docs): Make the 'package' in 'from package' more contrasty

--- a/docs/css/devdocs.css
+++ b/docs/css/devdocs.css
@@ -35,3 +35,8 @@ span.cm {
 span.si {
   color: #2E527A; /* Personally I think this is worse but some robot disagrees */
 }
+
+/* Imported package names */
+span.nn {
+  color: #0D7BAB; /* A bit darker blue */
+}
